# LLVM-Pointer-Deref

./: .gitignore  CMakeLists.txt  Makefile  pointer-deref.cpp  pointer-deref.h
test/: Makefile  output.bc  testfile.c  testfile.elf
